# contravariant

./: .gitignore  .hlint.yaml  .travis.yml  CHANGELOG.markdown  Data-Functor-Contravariant-Compose.html  Data-Functor-Contravariant-Day.html  Data-Functor-Contravariant-Divisible.html  Data-Functor-Contravariant-Generic.html  Data-Functor-Contravariant.html  Data-Functor-Day.html  HLint.hs  LICENSE  LICENSE.md  README.markdown  cabal.haskell-ci  contravariant.cabal  contravariant.haddock  doc-index.html  index-frames.html  index.html  mini_Data-Functor-Contravariant.html
.github/workflows/: haskell-ci.yml
Data/Functor/: Contravariant.hs  Day.hs
Data/Functor/Contravariant/: Applicative.hs  Coapplicative.hs  Compose.hs  Day.hs  Divisible.hs
old-src/Data/Functor/: Contravariant.hs
src/: Data-Functor-Contravariant-Compose.html  Data-Functor-Contravariant-Day.html  Data-Functor-Contravariant-Divisible.html  Data-Functor-Contravariant-Generic.html  Data-Functor-Contravariant.html  Data-Functor-Day.html
src/Data/Functor/: Contravariant.hs
src/Data/Functor/Contravariant/: Compose.hs  Divisible.hs  Generic.hs  Strategy.hs
wip/: Strategy.hs
