name:          contravariant
category:      Control, Data
version:       1.2.2
license:       BSD3
cabal-version: >= 1.6
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/contravariant/
bug-reports:   http://github.com/ekmett/contravariant/issues
copyright:     Copyright (C) 2007-2015 Edward A. Kmett
synopsis:      Contravariant functors
description:   Contravariant functors
build-type:    Simple
extra-source-files:
  .travis.yml
  CHANGELOG.markdown

source-repository head
  type: git
  location: git://github.com/ekmett/contravariant.git

flag tagged
  description:
    You can disable the use of the `tagged` package on older versons of GHC using `-f-tagged`.
    .
    Disabling this is an unsupported configuration, but it may be useful for accelerating builds in sandboxes for expert users.
  default: True
  manual: True

flag semigroups
  description:
    You can disable the use of the `semigroups` package on older versons of GHC using `-f-semigroups`.
    .
    Disabling this is an unsupported configuration, but it may be useful for accelerating builds in sandboxes for expert users.
  default: True
  manual: True

flag foreign-var
  description:
    You can disable the use of the `foreign-var` package on older versons of GHC using `-f-foreign-var`.
    .
    Disabling this is an unsupported configuration, but it may be useful for accelerating builds in sandboxes for expert users.
  default: True
  manual: True

library
  hs-source-dirs: src
  build-depends:
    base                              < 5,
    transformers        >= 0.2 &&     < 0.5,
    transformers-compat >= 0.3 &&     < 1,
    void                >= 0.6 &&     < 1

  if flag(tagged) && !impl(ghc >= 7.7)
    build-depends: tagged >= 0.4.4 && < 1

  if flag(semigroups)
    build-depends: semigroups >= 0.15.2 && < 1

  if flag(foreign-var)
    build-depends: foreign-var < 1

  if impl(ghc >= 7.4 && < 7.6)
    build-depends: ghc-prim

  exposed-modules:
    Data.Functor.Contravariant
    Data.Functor.Contravariant.Divisible
    Data.Functor.Contravariant.Compose

  ghc-options: -Wall
