name:          contravariant
category:      Control, Data
version:       1.3.3
license:       BSD3
cabal-version: >= 1.6
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/contravariant/
bug-reports:   http://github.com/ekmett/contravariant/issues
copyright:     Copyright (C) 2007-2015 Edward A. Kmett
synopsis:      Contravariant functors
description:   Contravariant functors
build-type:    Simple
extra-source-files:
  .travis.yml
  CHANGELOG.markdown
  HLint.hs

source-repository head
  type: git
  location: git://github.com/ekmett/contravariant.git

flag tagged
  description:
    You can disable the use of the `tagged` package using `-f-tagged`.
    .
    Disabling this is an unsupported configuration, but it may be useful for accelerating builds in sandboxes for expert users.
  default: True
  manual: True

flag semigroups
  description:
    You can disable the use of the `semigroups` package using `-f-semigroups`.
    .
    Disabling this is an unsupported configuration, but it may be useful for accelerating builds in sandboxes for expert users.
  default: True
  manual: True

flag StateVar
  description:
    You can disable the use of the `StateVar` package using `-f-StateVar`.
    .
    Disabling this is an unsupported configuration, but it may be useful for accelerating builds in sandboxes for expert users.
  default: True
  manual: True

library
  hs-source-dirs: src
  build-depends:
    base                              < 5,
    transformers        >= 0.2 &&     < 0.5,
    transformers-compat >= 0.3 &&     < 1,
    void                >= 0.6 &&     < 1

  if flag(tagged) && !impl(ghc >= 7.7)
    build-depends: tagged >= 0.4.4 && < 1

  if flag(semigroups)
    build-depends: semigroups >= 0.15.2 && < 1

  if flag(StateVar)
    build-depends: StateVar >= 1.1 && < 1.2

  if impl(ghc >= 7.2 && < 7.6)
    build-depends: ghc-prim

  exposed-modules:
    Data.Functor.Contravariant
    Data.Functor.Contravariant.Compose
    Data.Functor.Contravariant.Divisible

  if impl(ghc >= 7.4)
    exposed-modules: Data.Functor.Contravariant.Generic

  ghc-options: -Wall
