cabal-version: 2.2
name:          contravariant
category:      Control, Data
version:       1.6
license:       BSD-2-Clause OR Apache-2.0
license-file:  LICENSE.md
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/contravariant/
bug-reports:   http://github.com/ekmett/contravariant/issues
copyright:     Copyright (C) 2007-2021 Edward A. Kmett
synopsis:      Contravariant functors
description:   Contravariant functors.
build-type:    Simple
tested-with:   GHC == 8.6.5
             , GHC == 8.8.4
             , GHC == 8.10.4
extra-source-files:
  .hlint.yaml
  CHANGELOG.markdown
  README.markdown

source-repository head
  type: git
  location: git://github.com/ekmett/contravariant.git

flag StateVar
  description:
    You can disable the use of the `StateVar` package using `-f-StateVar`.
    .
    Disabling this is an unsupported configuration, but it may be useful for accelerating builds in sandboxes for expert users.
  default: True
  manual: True

library
  hs-source-dirs: src
  build-depends:
    , base >= 4.12 && < 5
    , transformers ^>= 0.5

  if flag(StateVar)
    build-depends: StateVar >= 1.2.1 && < 1.3

  exposed-modules:
    Data.Functor.Contravariant.Compose
    Data.Functor.Contravariant.Divisible
    Data.Functor.Contravariant.Generic

  if impl(ghc >= 9.0)
    -- these flags may abort compilation with GHC-8.10
    -- https://gitlab.haskell.org/ghc/ghc/-/merge_requests/3295
    ghc-options: -Winferred-safe-imports -Wmissing-safe-haskell-mode

  ghc-options: -Wall -Wno-star-is-type
  default-language: Haskell2010
